src/renderer/assets/stylesheets/appearance.sass
@import 'variables'

@mixin scheme($bg, $fg)
  #background
    background: $bg

  .pane-overlay
    background: $bg

  .pane-close
    color: $fg

  .pane-resize
    .line
      background: $fg

  .medium-editor
    color: $fg

    &:after
      color: $fg

  #editor-resizer
    background: $fg
    border-left-color: $bg
    border-right-color: $bg

  .fa
    color: $fg

  #sidebar
    color: $fg
    background: $bg
    border-color: transparent

    &.open
      border-color: darken( $bg, 6 )

  #file-tree
    .file,
    .folder
      &:before
        background-color: $bg

      &:hover
        background-color: darken( $bg, 6 )

        &:before
          background-color: darken( $bg, 6 )

  .add-file,
  .add-folder
    &:hover
      background-color: darken( $bg, 6 )

  #theme-selector .select
    border-color: rgba( $fg, 0.75 )

  #status-bar
    color: $fg
    background: $bg
    border-color: darken( $bg, 6 )

  #save-icon
    text-shadow: 1px 1px 0px $bg

  #context-menu
    color: $bg
    background: rgba( $fg, 0.8 )

  #modal-container
    background: darken( rgba( $bg, 0.6 ), 10 )

    .modal
      color: $bg
      background: $fg


  .editor .pane::-webkit-scrollbar-track
    background-color: $bg

  #sidebar-content::-webkit-scrollbar-track
    background-color: $bg

  .editor .pane::-webkit-scrollbar
    width: $scrollbar-width
    background-color: $bg

  #sidebar-content::-webkit-scrollbar
    width: $scrollbar-width
    background-color: $bg

  .editor .pane::-webkit-scrollbar-thumb,
  #sidebar-content::-webkit-scrollbar-thumb
    background-color: $fg


#app > .view
  &.scheme-sharp
    @include scheme($sharp-bg, $sharp-fg)

  &.scheme-smooth
    @include scheme($smooth-bg, $smooth-fg)

  &.scheme-frost
    @include scheme($frost-bg, $frost-fg)

  &.scheme-dark
    @include scheme($dark-bg, $dark-fg)

  &.scheme-contrast
    @include scheme($contrast-bg, $contrast-fg)


  &.font-family-merriweather
    font-family: Merriweather, serif

  &.font-family-roboto
    font-family: Roboto, sans-serif

  &.font-family-ptmono
    font-family: PT Mono, monospace


  &.font-size-small
    .medium-title,
    .medium-content h1
      font-size: 2.3rem

    .medium-content
      font-size: 0.8rem

  &.font-size-normal
    .medium-title,
    .medium-content h1
      font-size: 2.5rem

    .medium-content
      font-size: 1rem

  &.font-size-big
    .medium-title,
    .medium-content h1
      font-size: 2.7rem

    .medium-content
      font-size: 1.2rem

  &.font-size-bigger
    .medium-title,
    .medium-content h1
      font-size: 3rem

    .medium-content
      font-size: 1.5rem


body
  .medium-editor-toolbar
    background: none
    border: none
    box-shadow: none

    li:nth-child(6)
      clear: both

    li button
      width: 42px
      min-width: 42px
      height: 42px
      padding: 0
      border: none
      box-shadow: none

      > i
        width: 32px
        height: 32px
        padding: 8px
        border: 1px solid darken( $dark-bg, 6 )
        border-radius: 2px
        transition: border-color .2s
        box-sizing: border-box

    &.medium-toolbar-arrow-over:before
      top: -11px
      border-color: transparent transparent $color-less-subtle transparent

    &.medium-toolbar-arrow-under:after
      border-color: $color-less-subtle transparent transparent transparent

    .medium-editor-button-first,
    .medium-editor-button-last
      border-radius: 0 !important

  .medium-editor-toolbar-actions
    background: darken( $dark-bg, 6 )
    padding: 1px
    border-radius: 4px

  .medium-editor-toolbar li button
    background: darken( $dark-bg, 6 )
    color: $dark-fg

    &:hover
      background: darken( $dark-bg, 6 )
      color: $dark-fg

      > i
        border: 1px solid rgba(255, 255, 255, 0.5)

    &.medium-editor-button-active
      background: darken( $dark-bg, 6 )
      color: $color-action
      padding: 0
      cursor: default

      > i
        border: 1px solid rgba(255, 255, 255, 0.25)

  .medium-editor-action-h1,
  .medium-editor-action-h2
    i
      &:before,
      sup
        position: relative
        left: -2px

  .medium-editor-toolbar
    &.medium-toolbar-arrow-under:after
      top: 84px
      border-color: darken( $dark-bg, 6 ) transparent transparent transparent

    &.medium-toolbar-arrow-over:before
      top: -8px
      border-color: transparent transparent darken( $dark-bg, 6 ) transparent

